[package]
name = "rand_archive"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rand_archive"
crate-type = ["cdylib", "lib"]

[dependencies]
bincode = "1.3.3"
color-eyre = "0.6.2"
gcs-reader = { version = "0.1.0", optional = true }
indexmap = { version = "2.0.0", features = ["serde"] }
pyo3 = { version = "0.19.0", features = ["serde", "indexmap", "eyre"] }
rand = "0.8.5"
s3reader = { version = "1.0.0", optional = true }
serde = { version = "1.0.183", features = ["derive"]}
tempfile = "3.7.1"
thiserror = "1.0.48"
tokio = "1.32.0"

[features]
s3 = ["s3reader"]
gcs = ["gcs-reader"]

[profile.dev.package.backtrace]
opt-level = 3